Upgrade to Delta 4.1.0 + Spark 4.1.0 + Scala 2.13.17, all 15 tests pass
- Delta Spark 3.3.2 → 4.1.0
- Spark SQL 3.5.3 → 4.1.0
- Scala 2.13.16 → 2.13.17 (required by Spark 4.1.0)
- Fix getActiveCommitAtTime calls (new catalogTableOpt parameter)
- Tests run in-process with Java 17 (Spark 4.x requirement)
- 15/15 tests pass

Co-authored-by: Isaac